# perception-models

./: .env.example  .gitignore  README.md  check_install.py  pyproject.toml  run.py
app/: __init__.py  config.py  main.py
app/api/: __init__.py
app/api/routes/: __init__.py  folders.py  health.py  index.py  search.py
app/core/: __init__.py  embedding_generator.py  file_processor.py  model_loader.py  similarity_calculator.py
app/database/: __init__.py  connection.py  crud.py  migrations.py  models.py  schemas.py
app/monitoring/: __init__.py  event_handler.py  indexer.py  watcher.py
app/services/: __init__.py  deletion_tracker.py  indexing_service.py  search_service.py
app/utils/: __init__.py  array_utils.py  file_utils.py
docs/: QUICKSTART_LINUX.md  SETUP_LINUX_AMD.md
